--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "graph.gl",
-  "version": "1.0.0",
-  "description": "WebGL2-Powered Visualization Components for Graph Visualization",
+  "name": "@gongamax/graph.gl",
+  "version": "2.0.0",
+  "description": "WebGL2-Powered Visualization Components for Graph Visualization - Modernized for 2025",
   "keywords": [
     "graph",
     "visualization",
+    "phylogenetic",
+    "phylogenetic-tree",
+    "tree-visualization",
     "force-directed layout",
     "gpu",
+    "webgl",
     "deck.gl",
     "react",
-    "uber"
+    "d3"
   ],
   "main": "./dist/index.js",
   "module": "./dist/index.es.js",
@@ -35,8 +39,8 @@
     "test-debugger": "node --inspect-brk node_modules/.bin/jest --runInBand",
     "prettier-all": "prettier --write 'src/**/*.{js,json,css}' 'test/**/*.{js,json,css}' 'examples/**/*.{js,json,css}' 'docs/**/*.{js,json,css}'",
     "-------- STORYBOOK --------": "",
-    "storybook": "start-storybook -p 6006",
-    "storybook:build": "build-storybook -c .storybook -o engdocs",
+    "storybook": "storybook dev -p 6006",
+    "storybook:build": "storybook build -o engdocs",
     "storybook:deploy": "NODE_DEBUG=gh-pages gh-pages -d engdocs -e storybook",
     "-------- GATSBY WEBSITE --------": "",
     "website": "cd website && yarn && npm run start",
@@ -50,80 +54,97 @@
     "src",
     "static"
   ],
-  "author": "Javid Hsueh <javid@uber.com>",
+  "author": "Gonçalo Frutuoso <goncalofrutuoso@gmail.com> (https://github.com/Gongamax)",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Gongamax/graph.gl.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Gongamax/graph.gl/issues"
+  },
+  "homepage": "https://github.com/Gongamax/graph.gl#readme",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
   "resolutions": {
     "babel-core": "7.0.0-bridge.0"
   },
   "dependencies": {
-    "@deck.gl/core": "^7.1.7",
-    "@deck.gl/layers": "^7.1.7",
-    "@deck.gl/react": "^7.1.7",
+    "@deck.gl/core": "^9.0.0",
+    "@deck.gl/layers": "^9.0.0",
+    "@deck.gl/react": "^9.0.0",
+    "@deck.gl/widgets": "^9.0.0",
+    "@loaders.gl/core": "^4.3.0",
+    "@luma.gl/core": "^9.0.0",
+    "@luma.gl/engine": "^9.0.0",
     "cardinal-spline-js": "^2.3.6",
-    "color": "^3.1.2",
-    "d3": "^5.7.0",
-    "d3-array": "^2.0.3",
-    "d3-force": "^1.0.6",
-    "d3-format": "^1.3.0",
-    "d3-scale": "^2.1.0",
+    "color": "^4.2.3",
+    "core-js": "^3.36.0",
+    "d3": "^7.9.0",
+    "d3-array": "^3.2.4",
+    "d3-force": "^3.0.0",
+    "d3-format": "^3.1.0",
+    "d3-scale": "^4.0.2",
     "global": "^4.3.2",
     "lodash.isequal": "^4.5.0",
     "lodash.pick": "^4.4.0",
-    "probe.gl": "^3.0.3",
-    "prop-types": "^15.6.0",
+    "probe.gl": "^3.6.0",
+    "prop-types": "^15.8.1",
     "raf": "^3.4.1",
-    "styled-components": "^4.0.3"
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.4",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/preset-env": "^7.1.6",
-    "@babel/preset-flow": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.0.0",
-    "@storybook/addon-actions": "^5.1.9",
-    "@storybook/addon-info": "^5.1.9",
-    "@storybook/addon-knobs": "^5.1.9",
-    "@storybook/addon-links": "^5.1.9",
-    "@storybook/cli": "^5.1.9",
-    "@storybook/react": "^5.1.9",
-    "@storybook/theming": "^5.1.9",
+    "@babel/core": "^7.24.0",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.24.0",
+    "@babel/preset-flow": "^7.24.0",
+    "@babel/preset-react": "^7.24.0",
+    "@babel/register": "^7.24.0",
+    "@storybook/addon-essentials": "^8.4.7",
+    "@storybook/addon-links": "^8.4.7",
+    "@storybook/addon-controls": "^8.4.7",
+    "@storybook/react": "^8.4.7",
+    "@storybook/react-webpack5": "^8.4.7",
+    "@storybook/theming": "^8.4.7",
+    "storybook": "^8.4.7",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.5",
+    "@babel/eslint-parser": "^7.24.0",
+    "babel-jest": "^29.7.0",
+    "babel-loader": "^9.1.3",
     "create-universal-package": "^3.4.6",
-    "d3-scale-chromatic": "^1.3.3",
-    "d3-voronoi": "^1.1.4",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^5.8.0",
+    "d3-scale-chromatic": "^3.1.0",
+    "d3-delaunay": "^6.0.4",
+    "eslint": "^8.57.0",
     "eslint-config-uber-universal-stage-3": "^3.0.0",
-    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-cup": "^2.0.0",
-    "eslint-plugin-jest": "^22.0.1",
-    "eslint-plugin-prettier": "^3.0.0",
-    "eslint-plugin-react": "^7.11.1",
-    "gh-pages": "^2.0.1",
-    "jest": "^23.6.0",
-    "jest-dom": "^2.1.1",
-    "mini-css-extract-plugin": "^0.7.0",
+    "eslint-plugin-jest": "^27.9.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.0",
+    "gh-pages": "^6.1.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "@testing-library/jest-dom": "^6.4.2",
+    "mini-css-extract-plugin": "^2.8.1",
     "ngraph.forcelayout": "^0.5.0",
     "ngraph.generators": "^18.0.0",
     "ngraph.graph": "^0.0.14",
-    "prettier": "^1.15.1",
-    "prettier-eslint-cli": "^4.7.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-testing-library": "^5.3.0",
-    "rimraf": "^2.6.2",
-    "source-map-loader": "^0.2.3",
-    "source-map-support": "^0.5.0",
-    "storybook-readme": "^5.0.5",
+    "prettier": "^3.2.5",
+    "prettier-eslint-cli": "^8.0.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
+    "rimraf": "^5.0.5",
+    "source-map-loader": "^5.0.0",
+    "source-map-support": "^0.5.21",
     "viz.js": "2.0.0",
     "webcola": "^3.3.6"
   },
   "peerDependencies": {
-    "react": "^16.5.0",
-    "react-dom": "^16.5.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   }
 }
