--- a/.babelrc
+++ b/.babelrc
@@ -3,18 +3,34 @@
     "@babel/plugin-proposal-class-properties"
   ],
   "presets": [
-    "@babel/preset-react",
+    ["@babel/preset-react", {
+      "runtime": "automatic"
+    }],
     [
       "@babel/preset-env",
       {
-        "useBuiltIns": "entry"
+        "useBuiltIns": "usage",
+        "corejs": 3,
+        "targets": {
+          "node": "18",
+          "browsers": [">0.2%", "not dead", "not op_mini all"]
+        }
       }
     ],
     "@babel/preset-flow"
   ],
   "env": {
     "test": {
-      "presets": [["@babel/preset-env"], "@babel/preset-react"]
+      "presets": [
+        ["@babel/preset-env", {
+          "targets": {
+            "node": "current"
+          }
+        }],
+        ["@babel/preset-react", {
+          "runtime": "automatic"
+        }]
+      ]
     }
   }
 }
