--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@gongamax/graph.gl",
+  "name": "@frutuoso/graph.gl",
   "version": "2.0.0",
   "description": "WebGL2-Powered Visualization Components for Graph Visualization - Modernized for 2025",
   "keywords": [
