fix: use ES2017 build for browser imports to preserve native classes
The ES5 transpiled version can't properly extend native ES6 classes from
@deck.gl/core v9, causing 'Cannot call a class constructor without |new|' error.
Updated exports field to prioritize ES2017 module for browser builds.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,17 @@
     "./dist/index.js": "./dist/browser.es5.js",
     "./dist/index.es.js": "./dist/browser.es5.es.js"
   },
+  "exports": {
+    ".": {
+      "browser": {
+        "import": "./dist/browser.es2017.es.js",
+        "require": "./dist/browser.es5.js"
+      },
+      "import": "./dist/index.es.js",
+      "require": "./dist/index.js"
+    },
+    "./package.json": "./package.json"
+  },
   "es2015": {
     "./dist/browser.es5.es.js": "./dist/browser.es2015.es.js"
   },
