--- a/package.json
+++ b/package.json
@@ -95,8 +95,7 @@
     "d3-format": "^3.1.0",
     "d3-scale": "^4.0.2",
     "global": "^4.3.2",
-    "lodash.isequal": "^4.5.0",
-    "lodash.pick": "^4.4.0",
+    "lodash": "^4.17.21",
     "probe.gl": "^3.6.0",
     "prop-types": "^15.8.1",
     "raf": "^3.4.1",
@@ -104,36 +103,35 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
+    "@babel/eslint-parser": "^7.24.0",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/preset-env": "^7.24.0",
     "@babel/preset-flow": "^7.24.0",
     "@babel/preset-react": "^7.24.0",
     "@babel/register": "^7.24.0",
+    "@storybook/addon-controls": "^8.4.7",
     "@storybook/addon-essentials": "^8.4.7",
     "@storybook/addon-links": "^8.4.7",
-    "@storybook/addon-controls": "^8.4.7",
     "@storybook/react": "^8.4.7",
     "@storybook/react-webpack5": "^8.4.7",
     "@storybook/theming": "^8.4.7",
-    "storybook": "^8.4.7",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
     "babel-core": "^7.0.0-bridge.0",
-    "@babel/eslint-parser": "^7.24.0",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
     "create-universal-package": "^3.4.6",
-    "d3-scale-chromatic": "^3.1.0",
     "d3-delaunay": "^6.0.4",
+    "d3-scale-chromatic": "^3.1.0",
     "eslint": "^8.57.0",
-    "eslint-config-uber-universal-stage-3": "^3.0.0",
     "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-cup": "^2.0.0",
     "eslint-plugin-jest": "^27.9.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.0",
     "gh-pages": "^6.1.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "@testing-library/jest-dom": "^6.4.2",
     "mini-css-extract-plugin": "^2.8.1",
     "ngraph.forcelayout": "^0.5.0",
     "ngraph.generators": "^18.0.0",
@@ -142,11 +140,10 @@
     "prettier-eslint-cli": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "@testing-library/react": "^14.2.1",
-    "@testing-library/user-event": "^14.5.2",
     "rimraf": "^5.0.5",
     "source-map-loader": "^5.0.0",
     "source-map-support": "^0.5.21",
+    "storybook": "^8.4.7",
     "viz.js": "2.0.0",
     "webcola": "^3.3.6"
   },
